fix: Prevent horizontal scroll on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,6 +16,7 @@ body,
   flex-direction: column;
   align-items: center;
   padding: 0 var(--standard-space);
+  overflow-x: hidden;
 
   & > * {
     flex-shrink: 0;
